refactor: Smaller PMD fixes and test adjustments