@@ -9,10 +9,16 @@ package penna.core.internals;
  */
 public final class ThreadCreator {
     private ThreadCreator() {}
+    private static final ThreadGroup pennaThreadGroup = new ThreadGroup(Thread.currentThread().getThreadGroup(), "penna");
 
     public static Thread newThread(String name, Runnable target){
-        return Thread.ofVirtual()
-                .name(name)
-                .unstarted(target);
+        var thread = new Thread(pennaThreadGroup, target);
+
+        // We want to be able to identify the thread
+        thread.setName(name);
+
+        // Thread has to be a daemon thread in order for us to be able to close the JVM while it still runs.
+        thread.setDaemon(true);
+        return thread;
     }
 }
